[package]
name = "nih_plug_baseview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "2c1b1a7b0fef1a29a5150a6a8f6fef6a0cbab8c4", features = [
    "opengl",
] }
crossbeam = "0.8"
lazy_static = "1.4"
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
